# Packai

./: CONTRIBUTING.md  Descript.md  Descript.txt  LICENSE  Overview.txt  libr.txt  pa.py  pyproject.toml  requirements.txt
Настройки/: pip_manager_config.json
